--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -1,20 +1,21 @@
 <% content_for :content do %>
   <section class="welcome">
-    <div class="container">
-      <h1>Welcome to this page</h1>
-      <p>This is a comment that tells you something</p>
-    </div>
   </section>
   <section class="info">
     <div class="container">
-      <%= asd %>
-      <h2 class="text-center">We help you out</h2>
+      <h2 class="text-center">Nabatheon</h2>
       <div class="row">
         <div class="col-md-6 md-padded">
           <div class="icon-box">
             <i class="fa fa-lightbulb-o blue icon"></i>
             <p class="info-text">
-              Lorem ipsum dolor sit amet, in dicunt moderatius sed. At vix fugit delenit, his an facilis ancillae adipisci. Conceptam moderatius deterruisset ex eos, ea nulla vivendum democritum sea.
+              This module can:
+              <ul>
+                <li>Recieve a chunk of text (max ~150 words)</li>
+                <li>Extract keywords</li>
+                <li>Wikipedia lookup</li>
+                <li>Return JSON with extacted data</li>
+              </ul>
             </p>
           </div>
         </div>
@@ -22,7 +23,7 @@
           <div class="icon-box">
             <i class="fa fa-star red icon"></i>
             <p class="info-text">
-              Lorem ipsum dolor sit amet, in dicunt moderatius sed. At vix fugit delenit, his an facilis ancillae adipisci. Conceptam moderatius deterruisset ex eos, ea nulla vivendum democritum sea.
+              Built for Google Hackathon 2015-05-09.
             </p>
           </div>
         </div>
