--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -12,7 +12,7 @@
           [
             entity.type,
             entity.value,
-            entity.chunk,
+            link_to(entity.chunk.content.truncate(60), chunks_path(entity.chunk)),
             link_to('Show', entity_path(entity)),
             link_to('Edit', edit_entity_path(entity)),
             link_to('Destroy', entity, method: :delete, data: { confirm: 'Are you sure?' })
